*: turn on OpenAPI && refine some docs
